ビルド用コンテナのイメージを動作確認が取れたnode:14に変更

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   ankendev:
-    image: node:latest
+    image: node:14
     container_name: ankendev
     tty: true
     volumes:
