自動テストが壊れていたので修正
- スキル、プロジェクトのパス指定が間違っていたので修正
- サーバーが立ち上がる前にテストが実行されるケースがあったので、立ち上がるまで待つようスタートアップスクリプトを修正
- docker-composeから余分な設定を削除

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -10,11 +10,7 @@ services:
             - HTTP_PROXY=${HTTP_PROXY}
             - HTTPS_PROXY=${HTTPS_PROXY}
         volumes:
-            - ../runtime/src/:/src
-            - ../../src/dist/project-board-game:/src/static/
-            # for using docker on WSL2. path must be Absolute path
-            #- C:\path\to\repo\AnkenSugoroku\docker\runtime\src:/src/
-            #- C:\path\to\repo\AnkenSugoroku\src\dist\project-board-game:/src/static/
+            - ../src/:/src
         command: ["bash", "startup.sh"]
 
     anken_test_env:
@@ -32,6 +28,4 @@ services:
         tty: true
         volumes:
             - ./src:/src
-            # for using docker on WSL2. path must be Absolute path
-            #- C:\path\to\repo\AnkenSugoroku\docker\runtime\src:/src/
         command: ["bash", "startup.sh"]
